# weather_data_converter

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: exceptions.py  main.py  settings.py
src/processor/: __init__.py  processor.py  task.py  utils.py
src/receivers/: http_receiver.py  utils.py
src/transformers/: __init__.py  archivers.py  convertors.py  grib.py  loaders.py
src/utils/: __init__.py  common.py
