[tool.poetry]
name = "weather-data-converter"
version = "0.1.0"
description = ""
authors = ["yogson <yogson@gmail.com>"]
readme = "README.md"
packages = [{include = "weather_data_converter"}]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.9.1"
cfgrib = "^0.9.10.4"
xarray = "^2023.12.0"

[tool.ruff]
line-length = 120


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
